# DDSA-ROS

./: README.md  frames.gv
CompetitionMaps2017/round1/: round1_random.world
CompetitionMaps2017/round2/: round2.world
CompetitionMaps2017/round3/round3_v1/: round3_4cluster_v1.world
CompetitionMaps2017/round3/round3_v2/: round3_4clusters.world
CompetitionMaps2017/round4/round4_v1/: round4_one_large_cluster_16by16.world
CompetitionMaps2017/round4/round4_v2/: round4_one_large_cluster_16by16.world
launch/: swarmie.launch
logs/abridge/: build.make.000.log.stderr
logs/gazebo_plugins/: build.make.000.log.stderr
logs/mobility/: build.make.000.log.stderr
logs/obstacle_detection/: build.make.000.log.stderr
logs/rqt_rover_gui/: build.make.000.log.stderr
logs/shared_messages/: build.make.000.log.stderr
logs/target_detection/: build.make.000.log.stderr
misc/: deploy.sh  rover_onboard_node_launch.sh
results/: collision_data_2963.txt  collision_data_3329.txt  score_data_3329.txt
results/saved/Obstacle/: collision_data_11_59.txt  collision_data_12_51.txt  collision_data_12_7.txt  (+6 more)
simulation/worlds/: 1_dynamic_target.world  1_static_target.world  200_dynamic_targets.world  200_static_targets.world  27_dynamic_targets.world  27_static_targets.world  45_dynamic_targets.world  45_static_targets.world  96_dynamic_targets.world  96_static_targets.world  DDSA_demo1.world
src/behaviours/: CMakeLists.txt  package.xml
src/mobility/: CMakeLists.txt
src/mobility/src/: DDSAController.cpp  DDSAController.h  mobility.cpp
src/swarmie_msgs/: CMakeLists.txt
(+57 files in other folders)
